@@ -84,7 +84,7 @@ MPICH Machines file:  /usr/local/etc/machines
 .br
 SDR query command: /usr/lpp/ssp/bin/SDRGetObjects
 .br
-Genders query command: /admin/scripts/nodeattr
+Genders query command: /usr/bin/nodeattr
 
 .SH "ORIGIN"
 Pdsh/pcp was originally a rewrite of IBM dsh(1) by Jim Garlick
