@@ -111,7 +111,7 @@ Return largest of the remote command return values.
 .br
 /usr/lpp/ssp/bin/SDRGetObjects
 .br
-/admin/scripts/nodeattr
+/usr/bin/nodeattr
 .br
 /usr/local/bin/ssh
 .br
