@@ -96,3 +96,5 @@ Release 1.4
 Release 1.5pre
 
 	Renamed spec file to pdsh.spec.  Gzip installed man pages on Linux.
+
+	Moved path definitions to conf.h.  Changed nodeattr path to /usr/bin.
